--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AdictizBooks</title>
+  <title>Adictiz books web application</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/src/assets/favicon-32x32.png">
   <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/js/all.js" crossorigin="anonymous">
 </head>
 <body>
